set explicit UTF-8 encoding on writing